--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity android:name=".android.widget.WidgetIndexActivity" />
         <activity android:name=".android.widget.recyclerview.HorizontalPageActivity" />
         <activity android:name=".android.widget.recyclerview.RecyclerViewIndexActivity" />
+        <activity android:name=".android.widget.MyViewPagerActivity" />
+        <activity android:name=".android.widget.HorizontalPageActivity" />
     </application>
 
 </manifest>
