add easyVideoPlayer library.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.androidsummary" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,6 +32,7 @@
         <activity android:name=".android.widget.MyViewPagerActivity" />
         <activity android:name=".android.widget.HorizontalPageActivity" />
         <activity android:name=".android.widget.recyclerview.contactAdapter.ContactAdapterActivity" />
+        <activity android:name=".libraries.video.EasyVideoActivity" />
     </application>
 
 </manifest>
