show that empty layout if list is empty.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <activity android:name=".android.animation.PropertyAnimationIndexActivity" />
         <activity android:name=".android.animation.TweenAnimationIndexActivity" />
         <activity android:name=".android.animation.RotateAnimationActivity" />
+        <activity android:name=".android.widget.recyclerview.GridLayoutManagerActivity" />
     </application>
 
 </manifest>
