--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'com.yanzhenjie:permission:2.0.3'
+    implementation 'com.hyphenate:ease-im-kit:3.7.3'
+    implementation 'com.hyphenate:hyphenate-sdk:3.7.3'
 }
