--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.yanzhenjie:permission:2.0.3'
     implementation 'com.hyphenate:ease-im-kit:3.7.3'
     implementation 'com.hyphenate:hyphenate-sdk:3.7.3'
+    api 'com.github.bumptech.glide:glide:4.9.0'
 }
