--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity android:name=".android.widget.viewcomponent.ViewComponentActivity" />
         <activity android:name=".android.menu.MenuIndexActivity" />
         <activity android:name=".android.menu.PopupMenuActivity" />
+        <activity android:name=".android.widget.recyclerview.StackFromEndActivity" />
     </application>
 
 </manifest>
